2007-XX-XX Jeff Connelly <jeff2@homing.pidgin.im> - 0.8
* Allow "Get Info" on all users, by uid or username
* Fix crash when re-logging in, if login failed.
* Show descriptive error message if login password is too long.
* Update for Libpurple 2.0.2.

2007-06-14 Jeff Connelly <jeff2@homing.pidgin.im> - 0.7
* Add/delete buddy now functional (required many other code improvements).
* Show improved buddy information in tooltip text.
* Show user profile (in "Get Info" option) for buddies on buddy list.
* Fix crash when re-logging in, if login succeeded.

2007-06-12 Jeff Connelly <jeff2@homing.pidgin.im> - 0.6
* Use RC4 code from Libpurple 2.0.1
* Use a new implementation for sending and receiving messages (MsimMessage).
  This infrastructural change significantly improves extensibility.
* Show online buddies as online.
* Send and receive typing notifications (along with other required changes).

2007-05-22 Jeff Connelly <jeff2@homing.pidgin.im> - 0.5
* Add protocol escaping, so can now send and receive / and \ characters
* Designed Pidgin 2.0.0beta7
* Use RC4 code from Samba
* Use translations (_ macro)
* No major changes to code, still getting familiar with tools & community

2007-04-29 Jeff Connelly <jeff2@homing.pidgin.im> 

* NOTE: This code is now being developed under Monotone, in the
  im.pidgin.soc.2007.msimprpl branch on my local computer, which
  is periodically sync'd with pidgin.im's Monotone database.

  Changes will be logged to Monotone.

2007-04-15 Jeff Connelly <myspaceim@xyzzy.cjb.net> - 0.4

* Gracefully handle a full receive buffer
* Handle fatal errors
* Last version for Gaim 2.0.0beta6

2007-04-14 Jeff Connelly <myspaceim@xyzzy.cjb.net> - 0.3

* Win32 support
* Add a large number of precondition checks and a handful of assertions
* Add documentation to each function, for doxygen.

2007-04-10 Jeff Connelly <myspaceim@xyzzy.cjb.net> - 0.2

* Add ability to IM by email address.
* Show usernames on buddy list instead of userids.